Fixed header image and menu on mobile phones

--- a/wp-content/themes/nictitate/style.css
+++ b/wp-content/themes/nictitate/style.css
@@ -586,7 +586,6 @@ Header
     float:right;
     position:relative;
     z-index:9999;
-    margin-right: -37px;
 }
 #main-menu > li {
     float:left;
@@ -3565,7 +3564,7 @@ div.elements-box > div.timely.ai1ec-single-event > div.ai1ec-event-details.ai1ec
     }
 
     #sequence li {
-        background-position-x: -73% !important;
+        background-position-x: -55% !important;
     }
 
     .kopa-boxed .sticky-header {
